# API_for_digilocker

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.VSCodeCounter/2026-06-09_16-07-35/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2026-06-09_16-07-55/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-06-09_16-08-01/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-06-09_16-08-07/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-06-09_16-08-37/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: callback.py  health.py  router.py  verification.py
app/errors/: __init__.py  codes.py  exceptions.py  handlers.py
app/infrastructure/: __init__.py  database.py  http_client.py  redis.py
app/infrastructure/digilocker/: __init__.py  client.py  interface.py  mock.py  stub.py
app/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  request_id.py
app/models/: __init__.py  audit_event.py  base.py  verification.py  verification_result.py
app/observability/: __init__.py  logging.py  metrics.py  tracing.py
app/repositories/: __init__.py  audit.py  verification.py  verification_result.py
app/schemas/: __init__.py  callback.py  errors.py  health.py  provider.py  verification.py
app/security/: __init__.py  hashing.py  jwt_utils.py  pkce.py  rate_limit.py  state.py
app/services/: __init__.py  jwks.py  oauth.py  token.py  verification.py
app/static/css/: style.css
app/templates/: architecture.html  base.html  dashboard.html  home.html  mock_provider.html  result.html  start.html  timeline.html
app/ui/: router.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
migrations/: env.py
migrations/versions/: 7367709f81cc_create_initial_tables.py
tests/: __init__.py  conftest.py
tests/mock_provider/: __init__.py
tests/unit/: test_demo_pruning.py  test_deps.py  test_health.py  test_persistence.py  test_provider.py  test_rate_limit.py  test_security.py  test_services.py  test_ui.py  test_verification.py
